--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^6.1.95",
+    "axios": "^0.21.4",
     "core-js": "^3.8.3",
     "vue": "^3.0.4",
     "vuex": "^4.0.0"
