--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^6.1.95",
     "axios": "^0.21.4",
     "core-js": "^3.8.3",
+    "moment": "^2.29.1",
     "vue": "^3.0.4",
     "vuex": "^4.0.0"
   },
